2011-03-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/compiler-internal.hxx,
 test/unit/test_escape.cxx:
 - Minor changes for gcc 4.6.0.
2011-03-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, include/pqxx/largeobject.hxx,
 include/pqxx/result.hcxx, test/test000.cxx, test/test049.cxx,
 test/test050.cxx, test/test051.cxx, test/test053.cxx, test/test055.cxx,
 test/test061.cxx, test/test062.cxx, test/test082.cxx, test/test084.cxx,
 test/test093.cxx, test/unit/test_prepared_statement.cxx:
 - More clang fixes.
2011-03-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
 - Check for GNU-style strerror_r.
 src/util.cxx:
 - Dump Bart's wonderful strerror_r trick; clang didn't like it.
2011-03-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/result.hxx, src/binarystring.cxx,
 src/connection_base.cxx, src/cursor.cxx, src/largeobject.cxx,
 src/pipeline.cxx, src/result.cxx, src/statement_parameters.cxx,
 src/tablewriter.cxx, src/util.cxx:
 - Fixed clang errors; mostly signedness issues.
2011-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_notification.cxx:
 - Eliminated some more use of already-committed nontransaction.
 - Payload should be single-quoted, not double-quoted.
 test/test_helpers.hxx, test/test_main.hxx, test/test025.cxx:
 - New helper drop_table.
 - Fixed test for older backends, which don't have "DROP TABLE IF EXISTS."
2011-02-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx, include/pqxx/result.hxx, include/pqxx/util.hxx:
 - Fixes for problems spotted by clang++.
 tools/preprelease
 - Test against clang as well as gcc.
2011-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection.hxx, include/pqxx/cursor.hxx:
 - Fixed "don't include this" directions; fixes #211.  Thanks ehoeks.
 include/pqxx/basic_connection:
 - Cosmetic.
2011-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>