@@ -9,6 +9,10 @@ PACKAGE_VERSION	internal	autotools
 PGSTD	public	compiler
 PQXX_BROKEN_ITERATOR	public	compiler
 PQXX_BROKEN_USING_DECL	public	compiler
+PQXX_HAVE_GCC_CONST	public	compiler
+PQXX_HAVE_GCC_DEPRECATED	public	compiler
+PQXX_HAVE_GCC_NORETURN	public	compiler
+PQXX_HAVE_GCC_PURE	public	compiler
 PQXX_HAVE_BOOST_SMART_PTR	public	compiler
 PQXX_HAVE_CHAR_TRAITS	public	compiler
 PQXX_HAVE_COUNT_IF	internal	compiler
@@ -27,6 +31,7 @@ PQXX_HAVE_C_NAN	internal	compiler
 PQXX_HAVE_GCC_VISIBILITY	internal	compiler
 PQXX_HAVE_POLL	internal	compiler
 PQXX_HAVE_PQCANCEL	internal	libpq
+PQXX_HAVE_PQCLIENTENCODING	internal	libpq
 PQXX_HAVE_PQSETERRORVERBOSITY	internal	libpq
 PQXX_HAVE_PQDESCRIBEPORTAL	internal	libpq
 PQXX_HAVE_PQESCAPEBYTEA	internal	libpq
